syntax = "proto3";

package auction;

// Keep same go_package so generated code joins pb package.
option go_package = "auction/go-architecture/pb";

// Two-Phase Commit (2PC) voting + decision messages (Q1/Q2 Instructions.txt).
message TwoPCVoteRequest {
  string tx_id = 1;          // Unique transaction id
  string operation = 2;      // Human-readable operation description
}

message TwoPCVoteReply {
  string tx_id = 1;
  bool commit_ready = 2;     // Participant prepared to commit
  string reason = 3;         // Optional abort reason
}

message TwoPCDecision {
  string tx_id = 1;
  bool global_commit = 2;    // true = commit, false = abort
  string reason = 3;         // Explanation when aborted
}

message Empty {}

service TwoPCParticipant {
  rpc Vote(TwoPCVoteRequest) returns (TwoPCVoteReply);
  rpc Decide(TwoPCDecision) returns (TwoPCDecision);
}

service TwoPCCoordinator {
  // Initiates voting across participants and returns final decision.
  rpc StartVoting(TwoPCVoteRequest) returns (TwoPCDecision);
}
